...
import com.example.currecyconvertor.domain.model.CurrencyRate

fun CurrencyDto.toCurrencyRates(): List<CurrencyRate> {
    val currencyData = this.rates
    return listOf(
        CurrencyRate("INR", "Indian Rupee", currencyData.INR),
        CurrencyRate("EUR", "Euro", currencyData.EUR),
        CurrencyRate("USD", "US Dollar", currencyData.USD),
        CurrencyRate("JPY", "Japanese Yen", currencyData.JPY),
        CurrencyRate("BGN", "Bulgarian Lev", currencyData.BGN),
        CurrencyRate("CZK", "Czech Republic Koruna", currencyData.CZK),
        CurrencyRate("DKK", "Danish Krone", currencyData.DKK),
        CurrencyRate("GBP", "British Pound Sterling", currencyData.GBP),
        CurrencyRate("HUF", "Hungarian Forint", currencyData.HUF),
...
